@@ -1,6 +1,6 @@
 Package: SASmixed
-Version: 0.1-4
-Date: 2001/12/10
+Version: 0.1-5
+Date: 2001/12/31
 Title: Data sets from "SAS System for Mixed Models"
 Maintainer: Douglas Bates <bates@stat.wisc.edu>
 Author: Original by Littel, Milliken, Stroup, and Wolfinger
