@@ -1,25 +1,1 @@
-### $Id: zzz.R,v 1.2 2001/01/12 20:48:42 bates Exp $
-###
-###    Sample analyses of data from SAS System for Mixed Models
-###
-### Copyright 2000-2001  Douglas M. Bates <bates@stat.wisc.edu>
-###
-###
-### This file is part of the SASmixed library for R and related languages.
-### It is made available under the terms of the GNU General Public
-### License, version 2, or at your option, any later version,
-### incorporated herein by reference.
-###
-### This program is distributed in the hope that it will be
-### useful, but WITHOUT ANY WARRANTY; without even the implied
-### warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR
-### PURPOSE.  See the GNU General Public License for more
-### details.
-###
-### You should have received a copy of the GNU General Public
-### License along with this program; if not, write to the Free
-### Software Foundation, Inc., 59 Temple Place - Suite 330, Boston,
-### MA 02111-1307, USA
-
-### Force loading of the nlme package for the examples.
 require(nlme)
